idea/testData/multiplatform/duplicateActualsImplicit/bottom/bottom.kt
package foo

class <!ACTUAL_MISSING!>ActualInMiddleCompatibleInBottom<!>
actual class CompatibleInMiddleActualInBottom

class <!ACTUAL_MISSING!>CompatibleInMiddleAndBottom<!>
